--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -109,3 +109,29 @@
    font-size:40px;
 }
 
+.bgImage{
+    position: fixed;
+    top: 180px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.bgImage img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.container{
+    display: grid;
+    grid-template-rows: 25% 25% 25% 25%;
+    grid-template-columns: 25% 25% 25% 25% ;
+}
+
+.item-1{
+    background-color: coral;
+    height: 500px;
+}
