--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -133,29 +133,43 @@
 
 }
 
-.item-0{
+.item-1{
     display: flex;
     align-items:center;
     justify-content: center;
     height: 100px;
+    font-size: larger;
+    font-weight: 900;
+   
     
 }
 
-.item-1{
+.item-2{
 
-    grid-area: 1 / 1 / 1 / 1;
+    grid-column: 2;
     height: 100px;
     border-radius: 20px;
-    padding: 20px;
+    padding: 50px;
     align-items: center;
+    font-weight: 900;
+    color: white;
+    font-size: 2rem;
     
 }
 
 .social_icons{
     display: flex;
+    width: fit-content;
     flex-direction: column;
-    padding: 50px;
+    padding: 10px;
     gap: 15px;
+    border: solid;
+    margin-left: 50px;
+    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    border-radius: 50px;
+   
+    
 }
 .icons{
     width: 50px;
