--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -163,9 +163,9 @@
     flex-direction: column;
     padding: 10px;
     gap: 15px;
-    border: solid;
+    border: solid, white;
     margin-left: 50px;
-    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+   
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     border-radius: 50px;
    
@@ -173,6 +173,13 @@
 }
 .icons{
     width: 50px;
+}
+
+.about_us{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 
