--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -42,6 +42,10 @@
    
 }
 
+.navbar.current{
+    color: purple;
+}
+
 .glass-search-form {
         max-width: 400px;
         max-height: 50px;
@@ -101,8 +105,11 @@
     padding: 10px;
     background-color: aqua;
     color: white;
+    width: 100%;
+    position: fixed;
+    z-index: 10;
+    
    
-    ;
 }
 
 #title h1{
@@ -147,7 +154,7 @@
 
 .item-2{
 
-    grid-column: 2;
+    grid-column: 4;
     height: 100px;
     border-radius: 20px;
     padding: 50px;
@@ -155,7 +162,23 @@
     font-weight: 900;
     color: white;
     font-size: 2rem;
+    text-shadow: 3px 3px 3px #000;
     
+}
+
+.item-3{
+    grid-column: 2/5;
+    grid-row: 1/4;
+    height: 100px;
+    border-radius: 20px;
+    padding: 50px;
+    align-items: center;
+    font-weight: 900;
+    color: white;
+    font-size: 20px;
+    text-shadow: 3px 3px 3px #000;
+    margin-top: 100px;
+   
 }
 
 .social_icons{
@@ -166,7 +189,7 @@
     gap: 15px;
     border: solid, white;
     margin-left: 50px;
-   
+    position: fixed;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     border-radius: 50px;
    
@@ -197,10 +220,10 @@
     padding: 20px;
 }
 
-.team{
+.team-grid{
     display:flex;
-    gap:20px;
+    gap:200px;
     justify-content: center;
-    
+    margin-top: 150px;
 }
 
