--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -1,5 +1,6 @@
-*{
-    margin: 0;
+*
+{
+    margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
 }
@@ -46,22 +47,22 @@
     color: purple;
 } */
 
-.glass-search-form {
+/* .glass-search-form {
         max-width: 400px;
         max-height: 50px;
         padding: 1rem;
         background: rgba(255, 255, 255, 0.1);
         backdrop-filter: blur(10px);
         border-radius: 20px;
-        border: 1px solid rgba(255, 255, 255, 0.2);
+        border: 1px solid rgba(255, 255, 255, 0.8);
         transform: translateX(180px);
-    }
+    } */
 
     .glass-search-container {
         display: flex;
+        position: ab;
         max-width: 400px;
-        max-height: 50px;
-        transform: translateY(-15px);
+        max-height: 30px;
         background: rgba(255, 255, 255, 0.9);
         border-radius: 15px;
         overflow: hidden;
@@ -71,24 +72,27 @@
     .glass-search-input {
         flex: 1;
         padding: 15px 20px;
-         max-width: 400px;
-        max-height: 50px;
+        max-width: 400px;
+        max-height: 30px;
         border: none;
         outline: none;
         font-size: 16px;
         background: transparent;
+        
     }
 
     .glass-search-button {
+        align-items: center;
         padding: 15px 25px;
         max-width: 400px;
-        max-height: 50px;
+        max-height: 30px;
         background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         color: white;
         border: none;
         cursor: pointer;
         font-weight: 600;
         transition: transform 0.2s ease;
+      
     }
 
     .glass-search-button:hover {
@@ -96,7 +100,10 @@
     }
 
     #search_icon{
-        transform:translateY(-10px)
+        transform:translateY(-20px);
+        align-items: center;
+        justify-content: center;
+        
     }
 
 #title{
@@ -107,13 +114,15 @@
     color: white;
     width: 100%;
     position: fixed;
-    z-index: 10;
+    z-index: 100;
+    overflow: hidden;
     
    
 }
 
 #title h1{
    font-size:40px;
+  
 }
 
 .bgImage{
@@ -173,20 +182,7 @@
     
 }
 
-.item-3{
-    grid-column: 2/5;
-    grid-row: 1/4;
-    height: 100px;
-    border-radius: 20px;
-    padding: 50px;
-    align-items: center;
-    font-weight: 900;
-    color: white;
-    font-size: 20px;
-    text-shadow: 3px 3px 3px #000;
-    margin-top: 100px;
-   
-}
+
 
 .social_icons{
     display: flex;
@@ -258,7 +254,12 @@
 }
 
 .teamImg{
-    border-radius: 10px;
+    border-radius: 50px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 
@@ -357,7 +358,7 @@
 .contact-form-container {
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
-    border-radius:50px;
+    border-radius:20px;
     padding: 30px;
     border: 1px solid rgba(255, 255, 255, 0.2);
 }
