--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -106,6 +106,11 @@
         
     }
 
+.clear-button{
+    font-weight: 200;
+    
+}
+
 #title{
     display: flex;
     justify-content: center;
@@ -207,6 +212,7 @@
     margin-top: 200px;
     position: relative;
     z-index: 10;
+    max-width:50% ;
 }
 
 .about_us{
