--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -6,7 +6,7 @@
 }
 
 .navbar{
-    color: white;
+    color: rgb(230, 21, 21);
     position: sticky;
     top : 0;
     z-index: 100;
@@ -18,6 +18,7 @@
     color: white;
     justify-content:space-evenly;
     align-items: center;
+    position: relative;
     gap: 20px;
     list-style: none;
     margin: auto;
@@ -48,25 +49,27 @@
 } */
 
 /* .glass-search-form {
-        max-width: 400px;
+        max-width: 300px;
         max-height: 50px;
         padding: 1rem;
         background: rgba(255, 255, 255, 0.1);
         backdrop-filter: blur(10px);
         border-radius: 20px;
         border: 1px solid rgba(255, 255, 255, 0.8);
-        transform: translateX(180px);
+        transform: translateX(-90px);
     } */
 
     .glass-search-container {
         display: flex;
-        position: ab;
+        position: relative;
+        justify-content: space-evenly;
         max-width: 400px;
         max-height: 30px;
         background: rgba(255, 255, 255, 0.9);
         border-radius: 15px;
         overflow: hidden;
         box-shadow: 0 8px 32px rgba(0,0,0,0.1);
+        transform: translateX(-90px);
     }
 
     .glass-search-input {
@@ -114,6 +117,7 @@
 #title{
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 10px;
     background-color: aqua;
     color: white;
@@ -204,7 +208,7 @@
     
 }
 .icons{
-    width: 50px;
+    width: 25px;
 }
 
 .info{
