--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -122,6 +122,7 @@
     background-color: aqua;
     color: white;
     width: 100%;
+    height: 40px;
     position: fixed;
     z-index: 100;
     overflow: hidden;
@@ -136,7 +137,7 @@
 
 .bgImage{
     position: fixed;
-    top: 180px;
+    top: 150px;
     left: 0px;
     width: 100vw;
     height: 100vh;
@@ -159,35 +160,32 @@
 
 .container{
     display: grid;
-    grid-template-rows: 25% 25% 25% 25%;
-    grid-template-columns: 25% 25% 25% 25% ;
+    grid-template-rows: 25% 25% ;
+    grid-template-columns: 25% 25%  ;
+    position: relative;
+    transform: translateX(-80px);
+    max-width: 800px;
 
 
 }
 
-.item-1{
-    display: flex;
-    align-items:center;
-    justify-content: center;
-    height: 100px;
-    font-size: larger;
-    font-weight: 900;
-   
-    
-}
 
 .item-2{
 
     grid-column: 3;
-    height: 100px;
-    border-radius: 20px;
-    padding: 50px;
+
     align-items: center;
     font-weight: 500;
     color: white;
     font-size: 1.2rem;
     text-shadow: 3px 3px 3px #000;
     margin-top: 50px;
+    transform: translateY(50px);
+    border: solid 1px;
+    padding: 10px 10px 10px;
+    border-radius: 20px;
+    position: absolute;
+    
     
 }
 
@@ -204,6 +202,7 @@
     position: fixed;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     border-radius: 50px;
+    transform: translateY(130px);
    
     
 }
