--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -137,7 +137,7 @@
    align-items: center;
    display: flex;
    justify-content: center;
-   transform: translateX(-80px);
+
   
 }
 
@@ -173,6 +173,27 @@
     max-width: 800px;
 
 
+}
+
+.about-container{
+    color: white;
+    max-width: 800px;
+    transform: translateY(140px);
+}
+
+@media (width: 768px) {
+    .about-container{
+        width: 80vw;
+       margin-right: 10px;
+    }
+    
+}
+
+@media (width:425px){
+    .about-container{
+        width: 10px;
+        
+    }
 }
 
 
@@ -224,12 +245,6 @@
     max-width:50% ;
 }
 
-.about_us{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
 
 .company_background{
     padding: 80px;
@@ -245,20 +260,21 @@
     padding: 40px 20px;
 }
 
-.about_container{
-    display: flex;
-    align-items: flex-start; 
-    margin: 0 auto;
-    padding: 20px;
-}
-
 .team-grid{
     display: flex;
     flex-wrap: wrap; 
-    gap: 200px; /* Reduce gap for better mobile */
+    gap: -10px; 
     justify-content: center;
     max-width: 1200px;
     margin: 100px auto;
+}
+
+@media (width: 768px) {
+    .team-grid{
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+    }
 }
 
 .team-info{
@@ -266,15 +282,28 @@
     background-color: #000;
     border-radius: 20px;
     padding: 10px;
+    width: 150px;
+}
+
+@media (width: 768px) {
+    .team-info{
+        width: 250px;
+    }
 }
 
 .teamImg{
-    border-radius: 50px;
+    border-radius: 20px;
     position: relative;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 150px;
+   
     
+}
+
+@media (width: 768px) {
+    .teamImg{
+        width: 250px;
+    }
 }
 
 
