--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -4,7 +4,24 @@
     --bg-light: hdl (0 0 10%);
     --text: hsl (0 0% 95%);
     --text-muted: hsl(0 0% 70%);
-    --my-color: green;
+    --text: hsl(0 0% 95%);
+    --text-muted: hsl (0 0% 70%);
+}
+
+body.light {
+    --bg-dark: hsl(0 0% 90%);
+    --bg : hsl(0 0% 95%);
+    --bg-light: hdl (0 0 100%);
+    --text: hsl (0 0% 95%);
+    --text-muted: hsl(0 0% 70%);
+    --text: hsl(0 0% 5%);
+    --text-muted: hsl (0 0% 30%);
+    
+}
+
+body {
+    background: var(--bg-dark); 
+    color: var(--text-muted)
 }
 
 
@@ -77,7 +94,8 @@
         justify-content: space-evenly;
         max-width: 400px;
         max-height: 30px;
-        background: rgba(255, 255, 255, 0.9);
+        background: var(--bg-light);
+        color: var(--text);
         border-radius: 15px;
         overflow: hidden;
         box-shadow: 0 8px 32px rgba(0,0,0,0.1);
@@ -92,7 +110,8 @@
         border: none;
         outline: none;
         font-size: 12px;
-        background: transparent;
+        background: var(--bg-light);
+        color: var(--text);
         position:relative;
     }
 
