--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -118,6 +118,7 @@ body {
         max-width: 400px;
         max-height: 30px;
         background: var(--bg-light);
+        border: solid, hsl(0 0% 50%);
         color: var(--text);
         border-radius: 15px;
         overflow: hidden;
