--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -63,6 +63,7 @@ body {
     z-index: 100;
     width: 100vw;
     background: red;
+    z-index:10000;
 
 }
 
@@ -623,6 +624,15 @@ body {
     align-items: center;
     margin: 0;
     font-size: 18px;
+}
+
+.faq-item p {
+    color: rgba(255, 255, 255, 0.9);
+    margin-top: 10px;
+    line-height: 1.5;
+    display: none;
+    padding-top: 10px;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .faq-item p {
