--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -1,4 +1,51 @@
+:root {
+    --bg-dark: hsl(0 0% 0%);
+    --bg : hsl(0 0% 5%);
+    --bg-light: hdl (0 0 10%);
+    --text: hsl (0 0% 95%);
+    --text-muted: hsl(0 0% 70%);
+    --text: hsl(0 0% 95%);
+    --text-muted: hsl (0 0% 70%);
 
+
+    @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+
+  --ff: "Montserrat", sans-serif;
+  --colorp: #f9f9f9;
+  --colorp2: #fff;
+  --colora: #ffe537;
+  --colora2: #537fe7;
+  --colorbody: #1e1e1e;
+  --colors: #333;
+  --h1: bold 54px/60px var(--ff);
+  --h2: bold 36px/48px var(--ff);
+  --h3: bold 24px/36px var(--ff);
+  --links: 18px/18px var(--ff);
+  --p: 18px/30px var(--ff);
+  --p1: 24px/30px var(--ff);
+  --p2: 36px/48px var(--ff);
+  --subtext: 12px/20px var(--ff);
+  --transition: 0.3s ease-in-out;
+
+}
+
+body.light {
+    --bg-dark: hsl(0 0% 90%);
+    --bg : hsl(0 0% 95%);
+    --bg-light: hdl (0 0 100%);
+    --text: hsl (0 0% 95%);
+    --text-muted: hsl(0 0% 70%);
+    --text: hsl(0 0% 5%);
+    --text-muted: hsl (0 0% 30%);
+    
+}
+
+
+
+body {
+    background: var(--bg-dark); 
+    color: var(--text-muted)
+}
 
 
 
